<resources>
    <string name="app_name">MedTrack</string>
    <string name="no_meds_entered">No medications entered</string>

    <!-- BEGIN STRINGS FOR AddMedicationFragment -->
    <!-- Hints for the EditText views -->
    <string name="new_medication">New Medication</string>
    <string name="add_med_name">Medication Name</string>
    <string name="add_med_dosage">Dosage (ex. 5 MG)</string>
    <string name="add_med_instructions">Instructions</string>

    <!-- used to form a 'sentence' with the Spinners -->
    <string name="times">time(s)</string>

    <!-- used on the add_medication_button -->
    <string name="add_medication_btn_text">Add</string>

    <string name="add_success">%s added!</string>

    <!-- Array for num_doses_spinner -->
    <string-array name="num_doses">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!-- Array for dose_interval_spinner -->
    <string-array name="dose_interval">
        <item>Hourly</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Bi-weekly</item>
        <item>Monthly</item>
    </string-array>
    <!-- END STRINGS FOR AddMedicationFragment -->

    <!-- BEGIN STRINGS FOR MedDetailFragment -->
    <string name="med_detail_directions">Directions</string>
    <string name="error_loading_details">Error loading medication information.</string>
    <string name="edit_btn_text">Edit</string>
    <string name="delete_btn_text">Delete</string>
    <string name="add_reminder_btn_text">Add Reminder</string>
    <string name="confirm_delete_title">Confirm Deletion</string>
    <string name="confirm_delete_message">Are you sure you want to delete %s? This operation cannot be undone.</string>
    <string name="delete_success">%s deleted!</string>
    <!-- END STRINGS FOR MedDetailFragment -->

    <!-- BEGIN STRINGS FOR EditMedicineFragment -->
    <string name="update_medication">Update Medication</string>
    <string name="edit_appbar_title">Edit</string>
    <string name="update_btn_text">Update</string>
    <string name="update_success">%s updated!</string>
    <string name="reminder_text">Time to take %s!</string>
    <!-- END STRINGS FOR EditMedicineFragment -->

    <!-- BEGIN STRINGS FOR MedTrack Widget -->
    <string name="widget_title">MedTrack - Medication List</string>
    <!-- END STRINGS FOR MedTrack Widget -->

    <!-- SAMPLE TEXT FOR XML LAYOUTS-->
    <string name="test_dose">200 MG</string>
    <string name="test_directions">Take 1 tablet every 4 to 6 hours while pain persists.
        If pain does not respond to 1 tablet, 2 tablets may be used.
        Do not exceed 6 tablets in 24 hours.</string>
    <!-- END SAMPLE TEXT FOR XML LAYOUTS -->

    <!-- CONTENT DESCRIPTIONS -->
    <string name="pill_bottle_content_description">This is an image of a pill bottle.</string>
    <!-- END CONTENT DESCRIPTIONS -->
</resources>
