<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018 - Bill Combs
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.MedDetailFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/med_detail_image"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fortyeight_dp"
            android:layout_marginTop="@dimen/twentyfive_dp"
            android:contentDescription="@string/pill_bottle_content_description"
            android:src="@drawable/ic_pills"
            app:layout_constraintEnd_toStartOf="@+id/med_detail_name_tv"
            app:layout_constraintHorizontal_bias="@dimen/five_tenths_bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/med_detail_name_tv"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dp"
            android:layout_marginTop="@dimen/fortyeight_dp"
            android:layout_marginEnd="@dimen/eight_dp"
            android:textColor="@color/colorMainText"
            android:textSize="@dimen/twentyfive_sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@dimen/five_tenths_bias"
            app:layout_constraintStart_toEndOf="@+id/med_detail_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Ibuprofen" />

        <TextView
            android:id="@+id/_med_detail_dose_tv"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dp"
            android:layout_marginTop="@dimen/eight_dp"
            android:layout_marginEnd="@dimen/eight_dp"
            android:textColor="@color/colorMainText"
            android:textSize="@dimen/eighteen_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@dimen/five_tenths_bias"
            app:layout_constraintStart_toEndOf="@+id/med_detail_image"
            app:layout_constraintTop_toBottomOf="@+id/med_detail_name_tv"
            tools:text="@string/test_dose" />

        <TextView
            android:id="@+id/med_detail_directions_title_tv"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginTop="@dimen/forty_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            android:text="@string/med_detail_directions"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/twentyfive_sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@dimen/one_bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/med_detail_image" />

        <TextView
            android:id="@+id/med_directions_detail_content_tv"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:layout_marginEnd="@dimen/eight_dp"
            android:padding="@dimen/ten_dp"
            android:textColor="@color/colorMainText"
            android:textSize="@dimen/eighteen_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@dimen/zero_bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/med_detail_directions_title_tv"
            tools:text="@string/test_directions" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dp"
            android:layout_marginEnd="@dimen/eight_dp"
            android:layout_marginBottom="@dimen/eight_dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/edit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/eight_dp"
                android:layout_marginEnd="@dimen/eight_dp"
                android:layout_marginBottom="@dimen/fifteen_dp"
                android:background="@drawable/capsule_btn"
                android:text="@string/edit_btn_text" />

            <Button
                android:id="@+id/delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/eight_dp"
                android:layout_marginEnd="@dimen/eight_dp"
                android:layout_marginBottom="@dimen/fifteen_dp"
                android:background="@drawable/capsule_btn"
                android:text="@string/delete_btn_text" />

            <Button
                android:id="@+id/detail_add_reminder_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/eight_dp"
                android:layout_marginEnd="@dimen/eight_dp"
                android:layout_marginBottom="@dimen/fifteen_dp"
                android:background="@drawable/capsule_btn"
                android:paddingStart="@dimen/ten_dp"
                android:paddingEnd="@dimen/ten_dp"
                android:text="@string/add_reminder_btn_text" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>