<?xml version="1.0" encoding="utf-8"?><!--
~ Copyright (c) 2018 - Bill Combs
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:isScrollContainer="false">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        tools:context=".ui.AddMedicationFragment">

        <LinearLayout
            android:id="@+id/update_header_linearlayout"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/pillImageIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/eight_dp"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:layout_marginEnd="@dimen/eight_dp"
                android:contentDescription="@string/pill_bottle_content_description"
                android:padding="@dimen/twenty_dp"
                android:src="@drawable/ic_pills" />

            <TextView
                android:id="@+id/update_medication_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/eight_dp"
                android:layout_marginEnd="@dimen/eight_dp"
                android:text="@string/update_medication"
                android:textColor="@color/colorMainText"
                android:textSize="@dimen/twenty_sp" />

        </LinearLayout>

        <android.support.constraint.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="header_linearlayout" />


        <LinearLayout
            android:id="@+id/ud_input_fields_linearlayout"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twentyfive_dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier">

            <LinearLayout
                android:id="@+id/ud_edit_texts_linearlayout"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/barrier">

                <EditText
                    android:id="@+id/ud_med_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_med_name"
                    android:textColor="@color/colorMainText"
                    android:textColorHint="@color/colorTextHint" />

                <EditText
                    android:id="@+id/ud_med_dose_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_med_dosage"
                    android:textColor="@color/colorMainText"
                    android:textColorHint="@color/colorTextHint" />

                <EditText
                    android:id="@+id/ud_med_instructions_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_med_instructions"
                    android:textColor="@color/colorMainText"
                    android:textColorHint="@color/colorTextHint" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ud_spinner_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/eight_dp"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/ud_num_doses_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_one"
                    android:entries="@array/num_doses" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_one"
                    android:paddingStart="@dimen/five_dp"
                    android:paddingEnd="@dimen/five_dp"
                    android:text="@string/times"
                    android:textColor="@color/colorMainText"
                    android:textSize="@dimen/eighteen_sp" />

                <Spinner
                    android:id="@+id/ud_dose_interval_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/twentyfive_dp"
                    android:layout_weight="@dimen/weight_one"
                    android:entries="@array/dose_interval" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/update_medication_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/eight_dp"
            android:layout_marginEnd="@dimen/eight_dp"
            android:layout_marginBottom="@dimen/fifteen_dp"
            android:background="@drawable/capsule_btn"
            android:padding="@dimen/ten_dp"
            android:text="@string/update_btn_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>


